# actrisk

./: C:\Users\jzhng\Modelling\actrisk\examples\reserving_analysis\claim_development_random.csv  CONFIG_USAGE.md  LICENSE  README.md  pyproject.toml
actrisk/: config.yaml
actrisk/core/: actfitter.py
actrisk/examples/: claim_simulator
actrisk/utils/: utils.py
code/: mapping.yaml  test_jz
code/core/: actfitter.py  actsimulator.py
code/examples/: cat_claim_development  cat_intensity_simulator  claim_simulator
code/examples/correlated_sim/: dist_list.json
code/utils/: distribution_decorator.py  gdf_decorator.py  piecewise_linear_model.py  preprocessing  sampling.py  utils.py
examples/: claim_simulator
examples/claim_simulator/: claim_simulator.py
examples/claim_simulator_example/: claimsimulator_example.py
examples/core_module_example/: actfitter_example.py  actsimulator_example.py
examples/correlated_sim/: corr_matrix.csv  corr_simulation.py  dist_list.json
examples/reserving_analysis/: claim_development_random.csv  reserving.py
src/actrisk/: __init__.py  config.yaml
src/actrisk/core/: actfitter.py  actsimulator.py
src/actrisk/tools/: claimsimulator.py
src/actrisk/utils/: piecewise_linear_model.py  sampling.py  utils.py
