[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "actrisk"
version = "0.1.0.0"
description = "Of the Actuary, By the Actuary, For the Actuary: A Python package for actuarial risk modeling and simulation"
authors = [
    {name = "Juntao Zhang", email = "jzhng106@gmail.com"},
    {name = "Tingting Shi"}]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7"
]

[project.urls]
Homepage = "https://github.com/jzhng105/actrisk"
Documentation = "https://github.com/jzhng105/actrisk/docs"

[tool.setuptools]
package-dir = {"" = "src"}
